<resources>

    <!--region common-->
    <string name="app_name">Smart subs</string>
    <string name="facebook_app_id" translatable="false">2681721465409338</string>
    <string name="yandex_metrica_api_key" translatable="false">dd7914d9-76a1-400d-9976-82861f58865a</string>
    <!--endregion-->

    <!--region common-->
    <string name="symbol_rub">₽</string>
    <!--endregion-->

    <!--region masks-->
    <string name="mask_subs_count">%d %s</string>
    <string name="mask_notifs_count">%d %s</string>
    <string name="mask_price">%s %s</string>
    <string name="mask_subscription_price">%s %s %s %s</string>
    <string name="mask_subscription_price_3_words" translatable="false">%s %s %s</string>
    <string name="mask_subscription_price_quantity">%s %s %s %d %s</string>
    <string name="mask_days_until">in %d %s</string>
    <string name="mask_next_payment">Next payment in %d %s</string>
    <string name="mask_overall_spent">Overall spent %s %s</string>
    <!--endregion-->

    <!--region home-->
    <string name="title_day">day</string>
    <string name="title_month">month</string>
    <string name="title_year">year</string>
    <string name="add_sub">Add subscription</string>
    <string name="title_today">Today</string>
    <string name="title_no_subs">No subs\nAdd your first subscription on top right button.</string>

    <plurals name="plural_every">
        <item quantity="one">every</item>
        <item quantity="few">every</item>
        <item quantity="many">every</item>
        <item quantity="other">every</item>
    </plurals>

    <plurals name="plural_day">
        <item quantity="one">day</item>
        <item quantity="few">days</item>
        <item quantity="many">days</item>
        <item quantity="other">days</item>
    </plurals>

    <plurals name="plural_week">
        <item quantity="one">week</item>
        <item quantity="few">weeks</item>
        <item quantity="many">weeks</item>
        <item quantity="other">weeks</item>
    </plurals>

    <plurals name="plural_month">
        <item quantity="one">month</item>
        <item quantity="few">months</item>
        <item quantity="many">months</item>
        <item quantity="other">months</item>
    </plurals>

    <plurals name="plural_year">
        <item quantity="one">year</item>
        <item quantity="few">years</item>
        <item quantity="many">years</item>
        <item quantity="other">years</item>
    </plurals>

    <plurals name="plural_sub">
        <item quantity="one">subscription</item>
        <item quantity="few">subscriptions</item>
        <item quantity="many">subscriptions</item>
        <item quantity="other">subscriptions</item>
    </plurals>

    <plurals name="plural_notification">
        <item quantity="one">notification</item>
        <item quantity="few">notifications</item>
        <item quantity="many">notifications</item>
        <item quantity="other">notifications</item>
    </plurals>
    <!--endregion-->

    <!--region create-->
    <string name="title_cancel">Cancel</string>
    <string name="title_add_sub">Add subscription</string>
    <string name="title_sub_title">Subscription title</string>
    <string name="title_payment">Payment</string>
    <string name="title_additional">Extra</string>
    <string name="hint_title">e.g. Apple music</string>
    <string name="hint_price">0.00</string>
    <string name="hint_quantity">1</string>
    <string name="hint_first_pay">e.g. tomorrow</string>
    <string name="title_every">every</string>
    <string name="desc_first_pay">Add first payment date to see expenses, or next payment date if you can\'t remember (optional)</string>
    <string name="desc_trial_pay">Add trial period expiry date</string>
    <string name="title_note">Note</string>
    <string name="title_category">Category</string>
    <string name="title_trial_period">Trial period</string>
    <!--endregion-->

    <!--region subscription-->
    <string name="title_next_payment_today">Next payment is today</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Remove</string>
    <string name="title_save">Save</string>
    <string name="title_notify">Notify</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_days_before_payment_at">%d %s before payment at %s</string>
    <string name="title_in_payment_day_at">in payment day at %s</string>
    <string name="hint_time">time</string>
    <string name="title_one_time">one time</string>
    <string name="title_every_time">every time</string>
    <string name="title_are_you_sure">Are you sure?</string>
    <string name="title_yes">Yes</string>
    <string name="title_no">No</string>
    <string name="every_week">every week</string>
    <!--endregion-->

    <!--region notification-->
    <string name="title_in_payment_day">in payment day</string>
    <string name="title_days_before">%s before payment</string>
    <string name="title_for" />
    <string name="hint_days_before_value">1</string>
    <string name="title_choose_time">choose time</string>
    <string name="title_repeat">repeat</string>
    <string name="title_save_notification">Save notification</string>
    <string name="title_activate_notification">Activate notification</string>
    <string name="subscription_channel_name">Subscription progress notifications</string>

    <string name="title_notif_expires_today">Subscription expires today.\nDon\'t forget to pay or cancel subscription.</string>
    <string name="title_notif_expires_tomorrow">Subscription expires tomorrow.\nDon\'t forget to pay or cancel subscription.</string>
    <string name="title_notif_expires_days_after">Subscription expires in %d %s.\nDon\'t forget to pay or cancel subscription.</string>

    <string name="title_add_notif">Add notification</string>
    <!--endregion-->

    <!--region sort-->
    <string name="title_sort">Sort</string>
    <string name="title_title">Title</string>
    <string name="title_by">by</string>
    <string name="title_by_increase">ascending</string>
    <string name="title_by_decrease">descending</string>
    <!--endregion-->

    <!--region sortBy -->
    <string name="sort_by_title">title</string>
    <string name="sort_by_price">price</string>
    <string name="sort_by_days_left">days until payment</string>
    <string name="sort_by_creation_date">creation date</string>
    <!--endregion-->

    <!--region subscribeMedia -->
    <string name="title_telegram">telegram</string>
    <string name="title_subscribe_on">Subscribe to our</string>
    <string name="tg_channel_description">Here is our channel where we make reviews on subscriptions.</string>
    <string name="title_subscribe">Subscribe</string>
    <!--endregion-->

    <!--region sub list-->
    <string name="title_select_sub">Select subscription</string>
    <string name="title_subs">Subscriptions</string>
    <!--endregion-->

</resources>
