<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notif_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:ignore="contentDescription">

    <TextView
        android:id="@+id/notif_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/helvetica_bold"
        android:text="@string/title_notify"
        android:textColor="@color/colorNero"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/notif_deleteBtn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:tint="@color/colorPinkishOrange"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete_24px"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/notif_dayContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/notif_title">

        <RadioButton
            android:id="@+id/notif_dayRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorNero"
            android:checked="false" />

        <TextView
            android:id="@+id/notif_dayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/helvetica_regular"
            android:text="@string/title_in_payment_day"
            android:textColor="@color/colorNero"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/notif_daysContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/notif_dayContainer">

        <RadioButton
            android:id="@+id/notif_daysRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorNero"
            android:checked="false" />

        <TextView
            android:id="@+id/notif_daysFirstTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/helvetica_regular"
            android:text="@string/title_for"
            android:textColor="@color/colorNero"
            android:textSize="17sp" />

        <com.djavid.smartsubs.common.view.ClosableEditText
            android:id="@+id/notif_daysInput"
            style="@style/InputStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:alpha="0.6"
            android:autofillHints="@null"
            android:hint="@null"
            android:inputType="number"
            android:maxLength="3"
            android:padding="11dp"
            android:text="@string/hint_days_before_value" />

        <TextView
            android:id="@+id/notif_daysSecondTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/helvetica_regular"
            android:text="@string/title_days_before"
            android:textColor="@color/colorNero"
            android:textSize="17sp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/notif_timeContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:alpha="0.6"
        android:padding="3dp"
        app:layout_constraintEnd_toStartOf="@id/notif_repeatContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notif_daysContainer">

        <ImageView
            android:id="@+id/notif_timeBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:tint="@color/colorNero"
            app:srcCompat="@drawable/ic_schedule_24_px" />

        <TextView
            android:id="@+id/notif_timeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/helvetica_regular"
            android:text="@string/title_choose_time"
            android:textColor="@color/colorNero"
            android:textSize="15sp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/notif_repeatContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:alpha="0.6"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/notif_timeContainer"
        app:layout_constraintTop_toBottomOf="@id/notif_daysContainer">

        <ImageView
            android:id="@+id/notif_repeatBtn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_horizontal"
            android:tint="@color/colorNero"
            app:srcCompat="@drawable/ic_loop_24px" />

        <TextView
            android:id="@+id/notif_repeatTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/helvetica_regular"
            android:text="@string/title_repeat"
            android:textColor="@color/colorNero"
            android:textSize="15sp" />

    </FrameLayout>

    <Button
        android:id="@+id/notif_submitBtn"
        style="@style/SubmitBtnActiveStyle"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:text="@string/title_save_notification"
        app:layout_constraintTop_toBottomOf="@id/notif_timeContainer" />

    <Space
        android:id="@+id/notif_bottomSpace"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/notif_submitBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>